# live-bootcamp-project

./: compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/src/: main.rs
auth-service/: Cargo.toml
auth-service/.sqlx/: query-05c63a0c157e11cdcdd9e52325fde8faf14111ee5eb19d0862f15e027f951064.json  query-15c6e98be376f235183d7dfc03474333a827c6b6c6388180d37b0d65c9e14e53.json  query-bdb9cb3ea9fc526676da4a8d28f368f49cea6535404966e9f2d1b8a90cd988d1.json
auth-service/assets/: index.html
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: delete_account.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs
auth-service/test_helpers/: Cargo.toml
auth-service/test_helpers/src/: lib.rs
auth-service/tests/api/: delete_account.rs  helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
nginx/: nginx.conf
