[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = "0.7.4"
mockall = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
validator = "0.16.1"
axum-extra = { version = "0.9.2", features = ["cookie"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
rand = "0.9.2"

[dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json", "cookies"] }
fake = "=2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
